<resources>
    <string name="hello">Hello!</string>
    <string name="app_name">Project TBH</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="employee_id">Employee ID #</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_as">Sign in as:</string>
    <string name="system_admin">System Admin</string>
    <string name="tsa_manager">TSA Manager</string>
    <string name="page2">page_2</string>
    <string name="review_user">Review User</string>
    <string name="left_finger_success"> Left Finger Scanned Successfully</string>
    <string name="fp_initial_left">Please place left finger on sensor</string>
    <string name="are_fields_correct">Are these fields correct?</string>
    <string name="edit">Edit Fields</string>
    <string name="begin_onboarding">Begin Onboarding</string>
    <string name="finish_onboarding">Finish Onboarding</string>
    <string name="reports">Reports</string>
    <string name="scan">Start Scan</string>
    <string name="history">History</string>
    <string name="adduser">Add User</string>
    <string name="addmanager">Add Manager</string>
    <string name="addname">Enter Name</string>
    <string name="addaddress">Enter Address</string>
    <string name="addpassport">Enter Passport #</string>
    <string name="enterCreds">Please enter the following credentials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newID">%1$d</string>
    <string name="left_finger_ok">Left finger ok</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
</resources>